# trading-bot

./: README.md  pyproject.toml  vercel.json
api/: index.py
app/: app.py  interface.py  main.py
app/backtest/: runner.py  spot_simulation.py
app/engine/: broker.py  engine.py  spot_engine.py
app/indicators/: features.py  patterns_long.py
app/strategy/: adaptive_strategy.py  basic_strategy.py  simple_strategy.py
crypto_trading_agent/: bot.py  bot_futures.py  config.py  csts.py  main.py
crypto_trading_agent/backtest/: runner.py  spot_simulation.py
crypto_trading_agent/config/: default.yaml
crypto_trading_agent/data/: fetcher.py
crypto_trading_agent/engine/: broker.py  broker_base.py  data.py  engine.py  engine_thrader.py  risk.py  spot_broker.py  spot_engine.py
crypto_trading_agent/executor/: simulator.py  simulator_long.py  simulator_short.py  trading_simulator.py
crypto_trading_agent/indicators/: calculator.py  features.py  patterns_short.py
crypto_trading_agent/past_data/: futures_3y.csv  futures_data.py  spot_3y.csv  spot_data.py
crypto_trading_agent/risk/: manager.py
crypto_trading_agent/strategy/: adaptive_strategy.py  adaptive_trade_logic.py  base.py  basic_strategy.py  logic_long.py  logic_short.py  long_short_adaptive_logic.py  patterns_long.py  patterns_short.py  spot_strategy.py  trade_logic.py
crypto_trading_agent/utils/: helpers.py
